# configarg-py

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/configarg/: __init__.py  config.py
test/: config_test.py  integration_test.py
