[tool.poetry]
name = "configarg"
version = "0.1.0"
description = "Configuration file with argparse"
authors = ["NEWROPE Co. Ltd. <dev@newrope.biz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
